$Id$

2011-02-06 Roy Hills <Roy.Hills@nta-monitor.com>

	* acinclude.m4: Changed GCC_FORTIFY_SOURCE macro so the test program
	  doesn't include <features.h>, because that header file is not
	  present on all the operating systems that we support, e.g. OpenBSD.

2011-02-04 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-scan.c: Use pcap_get_selectable_fd() rather than pcap_fileno()
	  to get the pcap file descriptor.

	* check-host-list: Added new test to check the creation of the host
	  list.

2011-02-03 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-scan.c: When using --writepkttofile we no longer open a link
	  layer socket or a pcap handle, so we don't need root privileges.

	* check-packet: Remove check for root privileges as this is no longer
	  needed.

	* check-decode: Added two new tests to improve code coverage.

	* arp-scan.c, arp-scan.h: Modify add_host_pattern() and add_host() so
	  we always use the more efficient inet_pton() rather than
	  get_host_address() for IPnet/bits, IPnet:mask and IPstart-IPend
	  patterns.

2011-02-02 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-scan.c: Change operation of --readpktfromfile so it reads from
	  a pcap savefile rather than from a raw file.

	* pkt-simple-response.pcap, pkt-padding-response.pcap,
	  pkt-vlan-response.pcap, pkt-llc-response.pcap: New pcap format
	  files for check-decode.

	* check-decode: Modified to use new pcap format savefiles, and remove
	  check for root privileges as this is no longer needed.

2011-01-31 Roy Hills <Roy.Hills@nta-monitor.com>

	* link-dlpi.c: Fix "comparison between signed and unsigned" warning in
	  function dlpi_msg.

	* arp-fingerprint: Added fingerprint for Windows 7.

	* arp-scan.c: Changed what gets displayed for the different verbose
	  levels, and updated the --help output to reflect the new behaviour.

2011-01-30 Roy Hills <Roy.Hills@nta-monitor.com>

	* check-packet, check-decode: New checks to check packet creation and
	  packet decoding.
