@@ -15,7 +15,7 @@ In all cases, the letters in word are "e" for eqn, "r" for refer, "t" for tbl.
 Why does darwin 7.9 not have prototypes for pcap_datalink_val_to_name(),
 pcap_datalink_val_to_description() and pcap_setnonblock() even though the
 pcap library contains these functions?  arp-scan compiles with warnings, but
-runs OK.
+runs OK. This is on MacOS 10.3 (Panther) with Xcode tools 1.5
 
 Add support for win32 link-layer send and receive.
 
@@ -42,3 +42,14 @@ generate the correct packet format.  Currently the VLAN tag is added first,
 which is incorrect.
 
 Add XML output format.
+
+Dave's Mac gives these errors:
+gcc -DHAVE_CONFIG_H -I.  -DDATADIR=\"/usr/local/share/arp-scan\"   -g -O2 -Wall -Wshadow -Wwrite-strings -Wextra -fstack-protector -D_FORTIFY_SOURCE=2 -Wformat -Wformat-security -MT link-bpf.o -MD -MP -MF .deps/link-bpf.Tpo -c -o link-bpf.o link-bpf.c
+ In file included from link-bpf.c:46:
+ /usr/include/net/bpf.h:105: error: redefinition of struct bpf_program
+ /usr/include/net/bpf.h:130: error: redefinition of struct bpf_version
+ In file included from link-bpf.c:46:
+ /usr/include/net/bpf.h:386: error: redefinition of struct bpf_insn
+
+This is due to pcap.h including pcap_bph.h on Mac OS X, which defines things
+that conflict with net/bpf.h.
