@@ -1,5 +1,12 @@
 $Id$
 
+2011-02-19 Roy Hills <Roy.Hills@nta-monitor.com>
+
+	* arp-scan.h: On Apple Mac OS X systems with Xcode 2.5 and later,
+	  include <net/bpf.h> before <pcap.h>.
+
+	* configure.ac: Increment version number to 1.7.6.
+
 2011-02-06 Roy Hills <Roy.Hills@nta-monitor.com>
 
 	* acinclude.m4: Changed GCC_FORTIFY_SOURCE macro so the test program
